[package]
name = "dev-runtime"
version = "0.3.1"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
smallvec = "1.4.0"

frame-executive = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { package = "frame-system", git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", features = ["historical"], default-features = false }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

cumulus-runtime = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
cumulus-parachain-upgrade = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
cumulus-primitives = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
cumulus-message-broker = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }

orml-benchmarking = { path = "../../orml/benchmarking", default-features = false }
orml-currencies = { path = "../../orml/currencies", default-features = false }
orml-oracle = { path = "../../orml/oracle", default-features = false }
orml-oracle-rpc-runtime-api = { path = "../../orml/oracle/rpc/runtime-api", default-features = false }
orml-tokens = { path = "../../orml/tokens", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }

base-liquidity-pools = { package = "module-base-liquidity-pools", path = "../../modules/liquidity-pools/base", default-features = false }
margin-liquidity-pools = { package = "module-margin-liquidity-pools", path = "../../modules/liquidity-pools/margin", default-features = false }
margin-protocol = { package = "module-margin-protocol", path = "../../modules/margin-protocol", default-features = false }
margin-protocol-rpc-runtime-api = { path = "../../modules/margin-protocol/rpc/runtime-api", default-features = false }
primitives = { package = "laminar-primitives", path = "../../primitives", default-features = false }
module-traits = { package = "module-traits", path = "../../modules/traits", default-features = false }
synthetic-liquidity-pools = { package = "module-synthetic-liquidity-pools", path = "../../modules/liquidity-pools/synthetic", default-features = false }
synthetic-protocol = { package = "module-synthetic-protocol", path = "../../modules/synthetic-protocol", default-features = false }
synthetic-protocol-rpc-runtime-api = { path = "../../modules/synthetic-protocol/rpc/runtime-api", default-features = false }
synthetic-tokens = { package = "module-synthetic-tokens", path = "../../modules/synthetic-tokens", default-features = false }

runtime-common = { path = "../common", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "3.0.0" }

[features]
default = ["std"]
no_std = []
std = [
	"codec/std",
	"serde",

	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-version/std",

	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"frame-benchmarking/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-collective/std",
	"pallet-grandpa/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-randomness-collective-flip/std",
	"pallet-staking/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-bounties/std",
	"pallet-utility/std",
	"pallet-offences/std",
	"pallet-multisig/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-arithmetic/std",
	"sp-transaction-pool/std",

	"cumulus-runtime/std",
	"cumulus-parachain-upgrade/std",
	"cumulus-primitives/std",
	"cumulus-message-broker/std",
	"parachain-info/std",

	"orml-benchmarking/std",
	"orml-currencies/std",
	"orml-oracle-rpc-runtime-api/std",
	"orml-oracle/std",
	"orml-tokens/std",
	"orml-traits/std",

	"base-liquidity-pools/std",
	"margin-liquidity-pools/std",
	"margin-protocol-rpc-runtime-api/std",
	"margin-protocol/std",
	"primitives/std",
	"module-traits/std",
	"synthetic-liquidity-pools/std",
	"synthetic-protocol-rpc-runtime-api/std",
	"synthetic-protocol/std",
	"synthetic-tokens/std",

	"runtime-common/std",
]

runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
]

# When enabled, the runtime api will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime api exported functions
# in WASM.
disable-runtime-api = []
standalone = []
