[package]
name = "module-base-liquidity-pools"
version = "0.1.2"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-runtime = { version = "2.0.0-alpha.8", default-features = false }
sp-io = { version = "2.0.0-alpha.8", default-features = false }
sp-std = { version = "2.0.0-alpha.8", default-features = false }

frame-support = { version = "2.0.0-alpha.8", default-features = false }
frame-system = { version = "2.0.0-alpha.8", default-features = false }
pallet-balances = { version = "2.0.0-alpha.8", default-features = false }

orml-traits = { path = "../../../orml/traits", default-features = false }

traits = { package = "module-traits", path = "../../traits", default-features = false }
primitives = { package = "module-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0-alpha.8", default-features = false }
orml-currencies = { path = "../../../orml/currencies", default-features = false }
orml-tokens = { path = "../../../orml/tokens", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"orml-traits/std",
	"orml-tokens/std",
	"traits/std",
	"primitives/std",
]
