[package]
name = "module-margin-liquidity-pools"
version = "0.3.1"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

traits = { package = "module-traits", path = "../../traits", default-features = false }
primitives = { package = "laminar-primitives", path = "../../../primitives", default-features = false }

orml-currencies = { path = "../../../orml/currencies", default-features = false }
orml-tokens = { path = "../../../orml/tokens", default-features = false }
orml-utilities = { path = "../../../orml/utilities", default-features = false }

[dev-dependencies]
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
module-base-liquidity-pools = { path = "../base", default-features = false }
orml-traits = { path = "../../../orml/traits", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"traits/std",
	"primitives/std",
	"orml-currencies/std",
	"orml-tokens/std",
	"orml-utilities/std",
]
