[package]
name = "module-margin-liquidity-pools"
version = "0.4.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-arithmetic = { version = "2.0.0", default-features = false }

frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }

traits = { package = "module-traits", path = "../../traits", default-features = false }
primitives = { package = "laminar-primitives", path = "../../../primitives", default-features = false }

orml-currencies = { path = "../../../orml/currencies", default-features = false }
orml-tokens = { path = "../../../orml/tokens", default-features = false }
orml-utilities = { path = "../../../orml/utilities", default-features = false }

[dev-dependencies]
pallet-timestamp = { version = "2.0.0" }
pallet-balances = { version = "2.0.0" }
sp-core = { version = "2.0.0", default-features = false }
module-base-liquidity-pools = { path = "../base", default-features = false }
orml-traits = { path = "../../../orml/traits", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"traits/std",
	"primitives/std",
	"orml-currencies/std",
	"orml-tokens/std",
	"orml-utilities/std",
]
