[package]
name = "margin-protocol-rpc"
version = "0.4.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0" }
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"

sp-runtime = { version = "2.0.0" }
sp-api = { version = "2.0.0" }
sp-blockchain = { version = "2.0.0" }

margin-protocol-rpc-runtime-api = { path = "runtime-api" }
laminar-primitives = { path = "../../../primitives" }
