[package]
name = "module-margin-liquidity-pools-benchmarking"
version = "0.0.1"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-runtime = { version = "2.0.0-alpha.6", default-features = false }
sp-io = { version = "2.0.0-alpha.6", default-features = false }
sp-std = { version = "2.0.0-alpha.6", default-features = false }
sp-arithmetic = { version = "2.0.0-alpha.6", default-features = false }

frame-support = { version = "2.0.0-alpha.6", default-features = false }
frame-system = { version = "2.0.0-alpha.6", default-features = false }
frame-benchmarking = { version = "2.0.0-alpha.6", default-features = false, optional = true }

traits = { package = "module-traits", path = "../../../traits", default-features = false }
primitives = { package = "module-primitives", path = "../../../primitives", default-features = false }
module-base-liquidity-pools = { path = "../../base", default-features = false }
module-margin-liquidity-pools = { path = "..", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0-alpha.6", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"traits/std",
	"primitives/std",
	"module-base-liquidity-pools/std",
	"module-margin-liquidity-pools/std",
]
runtime-benchmarks = ["frame-benchmarking"]
