[package]
name = "synthetic-protocol-rpc-runtime-api"
version = "0.4.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-api = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0-alpha.6", default-features = false }
sp-arithmetic = { version = "2.0.0-alpha.6", default-features = false }

laminar-primitives = { path = "../../../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-api/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"laminar-primitives/std",
]
